--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "AGPLv3+"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">3.7, <4"
+python = ">=3.8, <4"
 mkdocs-material = "^9.5.28"
 
 
