--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,3 @@
-site_name: My Docs
-theme: material
-title: FreeMoCap Foundation 2024 NSF POSE Proposal (Notes Repository)
+site_name: FreeMoCap Foundation 2024 NSF POSE Proposal (Notes Repository)
+theme:
+  name: material
